# welcomer

./: .gitignore  .jscpd.json  .markdownlint.json  .mdformat.toml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.toml  pyproject.toml  taplo.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yaml  publish.yml
src/welcomer/: __init__.py  cache.py  cli.py  config.py  core.py  ical.py  smtp.py
src/welcomer/data/: test_config.toml  testdata.py
tests/: test_cache.py  test_cli.py  test_config.py  test_core.py  test_ical.py  test_smtp.py
tests/fixtures/: biscuit_chateau_napHub.ics  biscuit_chateau_snoozePal.ics  cal.ics  snoring_goat_snoozePal.ics  tipsy_gnome_napHub.ics
