[project]
name = "welcomer"
version = "0.1.0"
description = "A configurable welcome message tool"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.3",
    "tomli-w>=1.2.0",
]

[project.scripts]
welcomer = "welcomer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welcomer"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
