[project]
name = "welcomer"
version = "0.4.0"
description = "A configurable welcome message tool"
requires-python = ">=3.14"
dependencies = [
  "click>=8.3.1",
  "httpx>=0.28.1",
  "icalendar>=7.0.3",
  "rich>=14.3.3",
  "tomli-w>=1.2.0",
]

[project.scripts]
welcomer = "welcomer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welcomer"]

[dependency-groups]
dev = ["black>=26.3.1", "mdformat>=1.0.0", "pytest>=9.0.2", "ruff>=0.15.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.mdformat]
wrap = 100
