[project]
name = "welcomer"
version = "0.4.0"
description = "Send personalised welcome emails to guests loaded from iCal calendar URLs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pavel Dostál" }]
requires-python = ">=3.14"
keywords = ["ical", "email", "accommodation", "booking", "welcome", "hospitality"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Email",
]
dependencies = [
  "click>=8.3.1",
  "httpx>=0.28.1",
  "icalendar>=7.0.3",
  "rich>=14.3.3",
  "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/pdostal/welcomer"
Repository = "https://github.com/pdostal/welcomer"
Changelog = "https://github.com/pdostal/welcomer/blob/master/CHANGELOG.md"

[project.scripts]
welcomer = "welcomer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welcomer"]

[dependency-groups]
dev = ["black>=26.3.1", "mdformat>=1.0.0", "pytest>=9.0.2", "ruff>=0.15.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.mdformat]
wrap = 100
